http+usepurposes (#400)
* добавлен шаблон для HTTP сервисов
closes: #250

* Назначения использования UsePurposes для форм, конфигурации и расширения
closes: #288

* обновлены лицензии

* правки SQ

* bump gradle

* Обновление xstream